# mui

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
src/: app.rs  config.rs  main.rs
src/auth/: minecraft.rs  mod.rs  msa.rs  store.rs  xbox.rs
src/instance/: config.rs  manager.rs  mod.rs
src/java/: detect.rs  mod.rs  runtime.rs
src/minecraft/: download.rs  launch.rs  manifest.rs  mod.rs  rules.rs  version.rs
src/ui/: mod.rs  theme.rs
src/ui/screens/: home.rs  instance.rs  launch.rs  login.rs  mod.rs  versions.rs
src/ui/widgets/: log_panel.rs  mod.rs
